# NeHe_OpenGL_Qt5

./: CMakeLists.txt
Lesson01_CreateWindow/: CMakeLists.txt  openglwindow.cpp  openglwindow.h
Lesson02_CreatePolygon/: CMakeLists.txt  main.cpp  polygonwindow.cpp  polygonwindow.h
Lesson02_CreatePolygon/shader/: fragshader.glsl
Lesson03_SmoothColors/: CMakeLists.txt
Lesson04_Rotating/: CMakeLists.txt
Lesson05_SolidObjects/: CMakeLists.txt
Lesson06_TextureMapping/: CMakeLists.txt
Lesson07_BasicLighting/: CMakeLists.txt
Lesson08_Blending/: CMakeLists.txt
Lesson09_MovingScenes/: CMakeLists.txt
Lesson10_LoadingWorld/: CMakeLists.txt
Lesson11_WavingTextureMap/: CMakeLists.txt
Lesson12_DisplayLists/: CMakeLists.txt
Lesson13_BitmapFonts/: CMakeLists.txt
